[package]
name = "sudoku"
version = "0.1.0"
authors = ["Augs Machado <augustomachadoramos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"
pistoncore-glutin_window = "0.68.2"
rand = "0.8.3"
random = "0.12.2"
